--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -267,7 +267,9 @@ jobs:
         include:
           - target: x86_64-unknown-dragonfly
           - target: x86_64-unknown-openbsd
-          - target: armv7-unknown-linux-uclibceabihf
+          # Temporarily disable armv7-unknown-linux-uclibceabihf
+          # https://github.com/nix-rust/nix/issues/2200
+          #- target: armv7-unknown-linux-uclibceabihf
           - target: x86_64-unknown-haiku
     steps:
       - name: checkout
