chore: more platofrms to CI

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -68,7 +68,7 @@ task:
 # Tasks for Linux aarch64 native builds 
 task:
   matrix:
-    - name: Linux aarch64
+    - name: Linux aarch64 glibc
       arm_container:
         image: rust:1.69.0
         cpu: 1
@@ -76,6 +76,14 @@ task:
         - FreeBSD 14 amd64 & i686
       env:
         TARGET: aarch64-unknown-linux-gnu
+    - name: Linux aarch64 musl
+      arm_container:
+        image: rust:1.69.0
+        cpu: 1
+      depends_on:
+        - FreeBSD 14 amd64 & i686
+      env:
+        TARGET: aarch64-unknown-linux-musl
   setup_script:
     - rustup target add $TARGET
     - rustup component add clippy
