--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -271,7 +271,9 @@ jobs:
           # https://github.com/nix-rust/nix/issues/2200
           #- target: armv7-unknown-linux-uclibceabihf
           - target: x86_64-unknown-haiku
-          - target: i686-unknown-hurd-gnu
+          # Disable hurd due to
+          # https://github.com/nix-rust/nix/issues/2306
+          # - target: i686-unknown-hurd-gnu
     steps:
       - name: checkout
         uses: actions/checkout@v4
