--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ resource = []
 sched = ["process"]
 signal = ["process"]
 socket = ["memoffset"]
+system_v = ["fs"]
 term = []
 time = []
 ucontext = ["signal"]
