--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           TARGET: '${{ env.TARGET }}'
 
       - name: test
-        uses: ./.github/actions/test
+        uses: ./.github/actions/test_more
         with:
           TARGET: '${{ env.TARGET }}'
 
@@ -63,7 +63,7 @@ jobs:
           TARGET: "${{ env.TARGET }}"
 
       - name: test
-        uses: ./.github/actions/test
+        uses: ./.github/actions/test_more
         with:
           TARGET: "${{ env.TARGET }}"
 
